c4prj2_input/grade.txt
Grading at Sat Aug  3 00:17:00 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:17:8: error: ‘num’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     num[j] = str[i];
        ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
